--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       # Use OPENROUTER_API_KEY if configuring OpenRouter
       # OPENROUTER_API_KEY: your_openrouter_api_key_here
       # OPENAI_API_KEY: your_openai_api_key_here
+      # OPENCLAW_CONFIG_CONTENT: "full json content"
       
       # Optional: set timezone
       - TZ=UTC
