--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - OPENCLAW_GATEWAY_TOKEN=${OPENCLAW_GATEWAY_TOKEN}
       - OPENCLAW_MODEL=${OPENCLAW_MODEL:-anthropic/claude-3-opus-20240229}
       - OPENCLAW_CONFIG_CONTENT=${OPENCLAW_CONFIG_CONTENT}
       # Optional: set timezone
