--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,11 +20,13 @@ services:
       # Optional: set timezone
       - TZ=UTC
     labels:
-      - "traefik.enable=true"
+      - traefik.enable=true
       # Coolify generates its own rule usually, but enabling traefik helps it know to pick it up.
       # If you assign a domain in Coolify (e.g. openclaw.mydomain.com) it will proxy to port 18789.
-      - "coolify.managed=true"
-      - "traefik.http.routers.openclaw.rule=Host(`your-domain-here.com`) || HostRegexp(`{domain:.+}`)" # Placeholder, Coolify overrides this if set in UI usually.
-      - "traefik.http.services.openclaw.loadbalancer.server.port=18789"
+      - coolify.managed=true
+      - traefik.enable=true
+      - traefik.http.middlewares.gzip.compress=true
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+      - traefik.http.services.openclaw.loadbalancer.server.port=18789
     stdin_open: true # openclaw might need stdin for interactive setup sometimes
     tty: true        # needed for stdin
