--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,11 @@ services:
       - traefik.http.services.openclaw.loadbalancer.server.port=18789
     stdin_open: true # openclaw might need stdin for interactive setup sometimes
     tty: true        # needed for stdin
+    
+    
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:18789/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 120s
