--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,32 +9,32 @@ services:
     ports:
       - "18789:18789"
     volumes:
-      - ./data:/home/linuxbrew/.openclaw
+      # Config volume — persists openclaw.json, Telegram, OAuth, model settings
+      - openclaw-config:/home/linuxbrew/.openclaw
+      # Workspace volume — persists MEMORY.md, AGENTS.md, memory/, skills, etc.
+      - openclaw-workspace:/home/linuxbrew/openclaw
     environment:
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - OPENCLAW_GATEWAY_TOKEN=${OPENCLAW_GATEWAY_TOKEN}
-      - OPENCLAW_MODEL=${OPENCLAW_MODEL:-anthropic/claude-3-opus-20240229}
+      - OPENCLAW_MODEL=${OPENCLAW_MODEL:-openrouter/google/gemini-3-flash-preview}
       - OPENCLAW_CONFIG_CONTENT=${OPENCLAW_CONFIG_CONTENT}
-      # Optional: set timezone
+      # Set to "true" to force-overwrite config from env vars (one-time reset)
+      - OPENCLAW_FORCE_CONFIG=${OPENCLAW_FORCE_CONFIG:-false}
       - TZ=UTC
     labels:
       - traefik.enable=true
-      # Coolify generates its own rule usually, but enabling traefik helps it know to pick it up.
-      # If you assign a domain in Coolify (e.g. openclaw.mydomain.com) it will proxy to port 18789.
       - coolify.managed=true
-      - traefik.enable=true
       - traefik.http.middlewares.gzip.compress=true
-      #- traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
       - traefik.http.services.openclaw.loadbalancer.server.port=18789
-    stdin_open: true # openclaw might need stdin for interactive setup sometimes
-    tty: true        # needed for stdin
-    
-    
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:18789/"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 120s
+
+volumes:
+  openclaw-config:
+  openclaw-workspace:
